--- a/m254-gateway/pubspec.yaml
+++ b/m254-gateway/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.15.0-177.0.dev <3.0.0'
+  sdk: '>=2.14.4 <3.0.0'
 
 
-# dependencies:
+dependencies:
 #   path: ^1.8.0
+  json_serializable: ^6.0.0
+  mongo_dart: ^0.7.2
 
 dev_dependencies:
   lints: ^1.0.0
-dependencies: 
   build_runner: ^2.1.4
-  json_serializable: ^5.0.2
