--- a/m254-gateway/pubspec.yaml
+++ b/m254-gateway/pubspec.yaml
@@ -10,9 +10,10 @@ environment:
 dependencies:
 #   path: ^1.8.0
   http_server: ^1.0.0
-  json_serializable: ^6.0.0
   mongo_dart: ^0.7.2
+  json_annotation: ^4.3.0
 
 dev_dependencies:
   lints: ^1.0.0
   build_runner: ^2.1.4
+  json_serializable: ^6.0.0
